--- a/webroot/bootstrap/css/lrtk2.css
+++ b/webroot/bootstrap/css/lrtk2.css
@@ -1,7 +1,10 @@
-/* 懒人图库 搜集整理 www.lanrentuku.com */
+
 a:link, a:visited { color: #444; text-decoration: none; -webkit-transition: color .4s ease-in-out; -moz-transition: color .4s ease-in-out; -ms-transition: color .4s ease-in-out; -o-transition: color .4s ease-in-out; transition: color .4s ease-in-out; }
 a:hover { color: #c36; text-decoration: underline; }
-.pagnation { text-align: center; margin-top: 32px; }
+.pagnation {
+    position:fixed;bottom:0;text-align: center;
+    margin:0 auto;
+}
 .pagnation a { display: inline-block; width: 34px; height: 34px; line-height: 34px; overflow: hidden; background: url(../images/sprite.png) no-repeat 0 -29px; margin-left: 4px; font-size: 16px; vertical-align: top; -webkit-transition: all .4s ease-in-out; -moz-transition: all .4s ease-in-out; -ms-transition: all .4s ease-in-out; -o-transition: all .4s ease-in-out; transition: all .4s ease-in-out; }
 .pagnation a:hover { background-position: 0 -64px; color: #fff; text-decoration: none }
 .pagnation .page-prev, .pagnation .page-next { line-height: 555px; }
