--- a/template/index.twig
+++ b/template/index.twig
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
     <header class="clearfix">
-        <h1>Tips &amp; Tricks</h1>
+        <h1><a href="/Picture/Battle/getList">Tips &amp; Tricks</a></h1>
         <nav class="codrops-demos">
                 <!-- Top Navigation -->
                 <div class="main clearfix">
@@ -44,7 +44,7 @@
             {% for url in img_list %}
             <li>
                 <a href="{{ url.url }}">
-                    <img src="{{ url.img_url }}" height="220" width="165" alt="{{ url.id }}"/>
+                    <img src="{{ url.img_url }}" height="165" width="220" alt="{{ url.id }}"/>
                     <div><span>{{ url.name }}</span></div>
                 </a>
             </li>
