修复分页和搜索

--- a/template/index.twig
+++ b/template/index.twig
@@ -25,7 +25,7 @@
                     <!-- Optional columns for small components -->
                     <div class="column">
                         <div id="sb-search" class="sb-search">
-                            <form action="/Picture/Battle/search" method="get">
+                            <form action="/Picture/Battle/search">
                                 <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
                                 <input class="sb-search-submit" type="submit" value="">
                                 <span class="sb-icon-search"></span>
